# snakemake-storage-plugin-sftp

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_storage_plugin_sftp/: __init__.py  cnopts.py
tests/: tests.py
