[tool.poetry]
name = "snakemake-storage-plugin-sftp"
version = "0.1.0"
description = "A Snakemake storage plugin that handles files on an SFTP server. "
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.14.3"
snakemake-interface-storage-plugins = "^2.0.1"
pysftp = "^0.2.9"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
snakemake = "^7.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
